--- a/main.html
+++ b/main.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ0SJpOQtHZGXi-oHuSMQceyJW3y7xcs5h8mA&usqp=CAU" alt="Lion Image" width="800px" height="800px">
+
     <script type="text/javascript" src="./script.js">
 </script>
 
